# fullstack-hiring-challenge

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/endpoints/: csv.py
backend/data/: sample_data_01.csv  sample_data_02.csv  test_csv_file.csv
backend/test/: test_main.py
frontend/app/: index.html  package-lock.json  package.json
frontend/app/api/: csv.js
frontend/app/src/: App.vue
frontend/app/src/components/: APIButton.vue  Chart.vue  Dataset.vue  DatasetActionButton.vue
