[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["GitHermann <hermann.huang@efrei.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.0"}
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
